Fixed select text truncate

--- a/resources/assets/sass/bootstrap/_forms.scss
+++ b/resources/assets/sass/bootstrap/_forms.scss
@@ -67,7 +67,8 @@
 select.form-control {
   &:not([size]):not([multiple]) {
     $select-border-width: ($border-width * 2);
-    height: calc(#{$input-height} - #{$select-border-width});
+    // Truncate the text so i have to desactivate it.
+    //height: calc(#{$input-height} - #{$select-border-width});
   }
 
   &:focus::-ms-value {
